--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -17,27 +18,35 @@
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "postcss-loader": "^3.0.0",
-    "pug": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "pug": "^3.0.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js",
-    "dev:assets": "WEBPACK_ENV=development webpack",
-    "build:assets": "WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon --exec babel-node init.js --delay2",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "mini-css-extract-plugin": "^1.3.5",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "postcss": "^8.2.4",
-    "prettier": "^2.2.1"
-  }
+    "postcss-loader": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
