--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local-mongoose": "^6.1.0",
     "pug": "^3.0.0"
   },
   "scripts": {
@@ -39,6 +41,7 @@
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "passport-local": "^1.0.0",
     "postcss": "^8.2.4",
     "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
