--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/node": "^7.12.10",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "aws-sdk": "^2.845.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -21,6 +22,7 @@
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
